--- a/views/consumption.handlebars
+++ b/views/consumption.handlebars
@@ -31,7 +31,7 @@
 <div class="title-text-vaytindung">
 <div class="content-dichvu">
 <div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue"><img src="https://shinhanbankvay24h.com.vn/vay-tieu-dung/../../../source/shinhan_about.jpg" alt="" width="570" height="570" /></h3>
+<h3 class="title-blue"><img src="/public/image/shinhan_about.jpg" alt="" width="570" height="570" /></h3>
 <h3 class="title-blue">LỢI ÍCH KHI VAY VỐN TẠI SHINHANBANK</h3>
 </div>
 <div class="ct-right col-sm-8 col-xs-12">
@@ -90,10 +90,10 @@
 <div class="list-item-required">
 <div class="item col-sm-6 col-xs-12">
 <div class="box">
-<h4>ĐĂNG KÍ VAY TẠI ĐÂY <span style="background-color: #e03e2d;"><a style="background-color: #e03e2d;" href="../../../">https://shinhanbankvay24h.com.vn/</a></span></h4>
+<h4>ĐĂNG KÍ VAY TẠI <span style="background-color: #e03e2d;"><a style="background-color: #e03e2d;" href="/home">ĐÂY</a></span></h4>
 <p> </p>
 <p>            BẢNG TÍNH CHI TIẾT KHOẢN ĐÓNG HẰNG THÁNG</p>
-<p><img src="https://shinhanbankvay24h.com.vn/vay-tieu-dung/../../source/LAI-SUAT-Q2-1.jpg" alt="" width="1055" height="1008" /></p>
+<p><img src="/public/image/LAI-SUAT-Q2-1.jpg" alt="" width="1055" height="1008" /></p>
 </div>
 </div>
 </div>
