--- a/views/creditcard.handlebars
+++ b/views/creditcard.handlebars
@@ -63,7 +63,7 @@
 										<p><a href="https://img.topbank.vn/2019/03/26/pXubIXvx/cac-loai-the-tin-dun-c367.png"
 												target="_blank" rel="noopener"><img
 													title="Các loại thẻ tín dụng Shinhanbank"
-													src="https://img.topbank.vn/2019/03/26/pXubIXvx/cac-loai-the-tin-dun-c367.png"
+													src="/public/image/cac-loai-the-tin-dun-c367.png"
 													alt="Các loại thẻ tín dụng Shinhanbank - ảnh minh họa "
 													data-class="" data-height="" data-style="" data-width="600" /></a>
 										</p>
@@ -149,7 +149,7 @@
 										<p> </p>
 										<p><a href="https://img.topbank.vn/2019/03/26/pXubIXvx/eva-air-600x600-ab51.jpg"
 												target="_blank" rel="noopener"><img title="Ưu đãi tích lũy dặm bay "
-													src="https://img.topbank.vn/2019/03/26/pXubIXvx/eva-air-600x600-ab51.jpg"
+													src="/public/image/eva-air-600x600-ab51.jpg"
 													alt="Ưu đãi tích lũy dặm bay cùng thẻ tín dụng Shinhanbank"
 													data-class="" data-height="" data-style="" data-width="600" /></a>
 										</p>
@@ -234,7 +234,7 @@
 										<p><a href="https://img.topbank.vn/2018/06/18/pXubIXvx/shinhanbank-8b94.jpg"
 												target="_blank" rel="noopener"><img
 													title="Làm thẻ tín dụng Shinhan bank"
-													src="https://img.topbank.vn/2018/06/18/pXubIXvx/shinhanbank-8b94.jpg"
+													src="/public/image/shinhanbank-8b94.jpg"
 													alt="Làm thẻ tín dụng Shinhan bank - ảnh minh họa" data-class=""
 													data-height="" data-style="" data-width="600" /></a></p>
 										<p> </p>
