--- a/views/mortgage.handlebars
+++ b/views/mortgage.handlebars
@@ -27,7 +27,7 @@
 					<div class="content-dichvu">
 					   <div id="gioi-thieu" class="box-type row">
 <div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue"><img src="/vay-the-chap-nha-dat/../../source/hinh%20anh%20shinhan.jpg" alt="" width="492" height="289" /></h3>
+<h3 class="title-blue"><img src="/public/image/hinh%20anh%20shinhan.jpg" alt="" width="492" height="289" /></h3>
 <h3 class="title-blue">Giới thiệu</h3>
 </div>
 <div class="ct-right col-sm-8 col-xs-12">
@@ -73,7 +73,7 @@
 <div class="t-right">
 <div class="number">8,7<sup>%/năm</sup></div>
 <p class="t-bt">cố định 4 năm đầu</p>
-<p class="t-bt"><img src="/vay-the-chap-nha-dat/../../source/hinh%20anh%20shinhan%20%202.jpg" alt="" width="580" height="387" /></p>
+<p class="t-bt"><img src="/public/image/hinh%20anh%20shinhan%20%202.jpg" alt="" width="580" height="387" /></p>
 </div>
 </div>
 </div>
